--- a/WPF/View/MainWindow.xaml
+++ b/WPF/View/MainWindow.xaml
@@ -17,7 +17,7 @@
                 <Button Margin="5,1,5,1" Content="Сотрудники" Click="Button_Click" />
                 <Button Margin="5,1,5,1" Content="Компьютеры" Click="Button_Click_1" />
                 <Button Margin="5,1,5,1" Content="Мониторы" Click="Button_Click_2" />
-                <Button Margin="5,1,5,1" Content="Принтеры" />
+                <Button Margin="5,1,5,1" Content="Принтеры" Click="Button_Click_4" />
                 <Button Margin="5,1,5,1" Content="Разное" Click="Button_Click_3" />                
                 <Button Margin="5,1,5,1" x:Name="btnDeps" Content="Отделы" Click="btnDeps_Click" />
                 <Button Margin="5,1,5,1" x:Name="btnPoss" Content="Должности" Click="btnPoss_Click" />
