--- a/WPF/View/printer.xaml
+++ b/WPF/View/printer.xaml
@@ -1,13 +1,13 @@
-﻿<Page x:Class="WPF.View.monitor"
+﻿<Page x:Class="WPF.View.printer"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:WPF.View"
-      xmlns:root="clr-namespace:WPF"      
+      xmlns:root="clr-namespace:WPF"
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
-       Title="monitor" Background="White" KeepAlive="{Binding EditMode}"  FocusManager.FocusedElement="{Binding ElementName=SearchtextBox}">
+       Title="monitor" Background="White" KeepAlive="{Binding EditMode}" FocusManager.FocusedElement="{Binding ElementName=SearchtextBox}">
 
     <Page.Resources>
         <root:BoolToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
@@ -25,8 +25,7 @@
             <TextBox.InputBindings>
                 <KeyBinding Command="{Binding Select}" Key="Enter"/>
             </TextBox.InputBindings>
-        </TextBox>            
-
+        </TextBox>
 
         <Grid Grid.Row="1" >
             <DataGrid SelectedValue="{Binding Selected,Mode=TwoWay}"  CanUserAddRows="False" ScrollViewer.CanContentScroll="True"  AutoGenerateColumns="False" x:Name="Grid" HorizontalAlignment="Left" ItemsSource = "{Binding Path=EntityList, Mode=OneWay}">
@@ -44,7 +43,6 @@
                     </DataGridTemplateColumn>
                     <DataGridTextColumn Binding="{Binding Model, Mode=OneWay}" Header="Модель" Width="Auto" />
                     <DataGridTextColumn Binding="{Binding Emp.FIO, Mode=OneWay}" Header="Пользователь" Width="Auto" />
-                    <DataGridTextColumn Binding="{Binding Name, Mode=OneWay}" Header="Пользователь" Width="Auto" />
                 </DataGrid.Columns>
             </DataGrid>
         </Grid>
@@ -66,16 +64,9 @@
                     </StackPanel>
                 </StackPanel>
                 <StackPanel>
-                    <TextBlock FontSize="10" Margin="5,0,0,0"  HorizontalAlignment="Left" VerticalAlignment="Bottom">Диагональ</TextBlock>
-                    <StackPanel Orientation="Horizontal" >
-                        <TextBox Padding="1" Width="auto" Margin="5,0,0,0" Text="{Binding Path=Diagonal.Name,Mode=OneWay}"></TextBox>
-                        <Button x:Name="SetDiagbutton" Content="..." HorizontalAlignment="Left" Height="20" Width="20" Command="{Binding DataContext.SetDiagonal, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Page}}" CommandParameter= "{Binding SelectedItem}"/>
-                    </StackPanel>
-                </StackPanel>
-                <StackPanel>
                     <TextBlock FontSize="10" Margin="5,0,0,0"  HorizontalAlignment="Left" VerticalAlignment="Bottom">Комментарий</TextBlock>
                     <TextBox Padding="1" Width="auto" Margin="5,0,0,0" Text="{Binding Path=Comment}"></TextBox>
-                </StackPanel>                
+                </StackPanel>
             </WrapPanel>
         </Border>
 
