--- a/WebSpr/Views/Shared/_LoginPartial.cshtml
+++ b/WebSpr/Views/Shared/_LoginPartial.cshtml
@@ -10,6 +10,6 @@
     <ul>
 @*        <li>@Html.ActionLink("Регистрация", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>*@
         @*<li>@Html.ActionLink("Вход для администраторов", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>*@
-        <li>@Html.ActionLink("Вход для администраторов11", "Index", "Home", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        <li>@Html.ActionLink("Вход для администраторов", "Index", "Home", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
     </ul>
 }
