--- a/WPF/View/MainWindow.xaml
+++ b/WPF/View/MainWindow.xaml
@@ -24,6 +24,7 @@
                 <Button Margin="5,1,5,1" x:Name="btnSettings" Content="Настройки" Click="btnSettings_Click"/>
                 <Button Margin="5,1,5,1" x:Name="btnTest" Content="Словари" Click="btnTest_Click"/>
                 <Button Margin="5,1,5,1" x:Name="btnMc" Content="МЦ" Click="btnMc_Click"/>
+                <Button Margin="5,1,5,1" x:Name="btnXML" Content="ExpotToXml" Click="btnXML_Click"/>                
             </StackPanel>
         </ScrollViewer>
         <Frame Padding="0,0,0,0" NavigationUIVisibility="Hidden"  x:Name="MainFrame" Grid.Column="1" Background="#CCCCCC"/>
